Made some modifications to the site and started working on the WPA2 post

--- a/themes/alpha-dust/source/css/_partial/post-content.styl
+++ b/themes/alpha-dust/source/css/_partial/post-content.styl
@@ -76,7 +76,8 @@ section.main
         font-style italic
         &.left
           float left
-
+      .tab
+        text-indent: 40px;
       img
         display block
         margin 0 auto
