--- a/themes/alpha-dust/layout/post.ejs
+++ b/themes/alpha-dust/layout/post.ejs
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
 
         <!--Title and Logo-->
-        <%- partial('_partial/header.ejs', {logoIcon: page.logoIcon, headerTitle: ''}) %>
+        <%- partial('_partial/header.ejs', {logoIcon: page.logoIcon, headerTitle: config.title}) %>
 
         <section class="main">
             <%- partial('_partial/article-long', {item: page}) %>
