--- a/themes/alpha-dust/source/css/_partial/post-content.styl
+++ b/themes/alpha-dust/source/css/_partial/post-content.styl
@@ -78,6 +78,19 @@ section.main
           float left
       .tab
         text-indent: 40px;
+      .column
+        float:left;
+        width:50%;
+      .row:after
+        content: "";
+        display: table;
+        clear: both;
+        margin-right: 10px;
+
+      li
+        margin-right: 40px;
+
+
       img
         display block
         margin 0 auto
