fixed routing issue with in the menu links

--- a/themes/alpha-dust/layout/_partial/header.ejs
+++ b/themes/alpha-dust/layout/_partial/header.ejs
@@ -1,4 +1,13 @@
 <header>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155161682-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155161682-1');
+    </script>
     <div class="logo">
         <a href="<%- config.root %>"><i class="logo-icon fa <%- logoIcon ? logoIcon : theme.fa_logo %>" aria-hidden="true"></i></a>
         <% if(headerTitle) { %>
